<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    android:foreground="?selectableItemBackground"
    android:id="@+id/ri_layout">

    <LinearLayout
        android:id="@+id/rl_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rep_province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/_100"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rep_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/_100"
            android:textSize="16sp"
            android:textStyle="italic" />

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@color/teal_700" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/cases"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rep_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/_100"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/rep_cases_changed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/_100"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/deaths"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rep_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/_100"
                android:textColor="@color/red_700"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/rep_deaths_changed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/_100"
            android:textColor="@color/red_700"
            android:textSize="16sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/hospitalized"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rep_hospitalized"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/_100"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/rep_hospitalized_changed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/_100"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/recoveries"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rep_recoveries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/_100"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/rep_recoveries_changed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/_100"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/tests"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rep_tests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/_100"
                android:textColor="@color/purpule"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/rep_tests_changed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/_100"
            android:textColor="@color/purpule"
            android:textSize="16sp"
            android:textStyle="italic" />


    </LinearLayout>

</androidx.cardview.widget.CardView>