<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SummaryFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:theme="@style/CircularProgress"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="4dp"/>

    <ScrollView
        android:id="@+id/sr_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_canada_main"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/summary"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/summary_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/_100"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <View
                    android:layout_width="300dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:background="@color/teal_700" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_weight="1"
                        android:text="@string/cases"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/_100"
                        android:textColor="@color/blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/cases_changed"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/_100"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_weight="1"
                        android:text="@string/deaths"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/_100"
                        android:textColor="@color/red_700"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/deaths_changed"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/_100"
                    android:textColor="@color/red_700"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_weight="1"
                        android:text="@string/hospitalized"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/hospitalized"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/_100"
                        android:textColor="@color/yellow"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/hospitalized_changed"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/_100"
                    android:textColor="@color/yellow"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_weight="1"
                        android:text="@string/recoveries"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/recoveries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/_100"
                        android:textColor="@color/green"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/recoveries_changed"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/_100"
                    android:textColor="@color/green"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_weight="1"
                        android:text="@string/tests"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/_100"
                        android:textColor="@color/purpule"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tests_changed"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/_100"
                    android:textColor="@color/purpule"
                    android:textSize="16sp"
                    android:textStyle="italic" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </ScrollView>

    </RelativeLayout>

</FrameLayout>